fixing poster on mobile

--- a/src/events.css
+++ b/src/events.css
@@ -22,5 +22,6 @@
 }
 
 .posterImg {
-  height: 70vh;
+  max-height: 70vh;
+  max-width: 70vw;
 }
